--- a/server/TODO
+++ b/server/TODO
@@ -3,10 +3,13 @@ TODO:
 1. redesign the project, think what to do and how, write everything -
    think how to design the services, the logic, the API etc.
 
+3. make everything able to get from the config, and then in the constructor make option to umplement legs and queues by loops, push defaults to them
+
 2. think how to connect to database, what to write there - maybe 1 entity of flight datails and one entity for the log (from, to, time).
 
-3. make everything
 
 3. think how to get the flights from external api
 
 4. think what to do in the UI
+
+
